[gd_scene load_steps=4 format=3 uid="uid://cnb4tcequula"]

[ext_resource type="Script" path="res://shooter_character.gd" id="1_km7rs"]
[ext_resource type="SpriteFrames" uid="uid://hl6s15ny81qr" path="res://assets/sprites/npc.tres" id="2_270qb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5t8ig"]
radius = 16.0

[node name="ShooterCharacter" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_km7rs")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 64.0
path_postprocessing = 1
avoidance_enabled = true
radius = 18.0

[node name="WeaponTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="DeadCleanupTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5t8ig")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_270qb")
animation = &"stand"
autoplay = "stand"

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="WeaponTimer" to="." method="_on_weapon_timer_timeout"]
[connection signal="timeout" from="DeadCleanupTimer" to="." method="_on_dead_cleanup_timer_timeout"]
